--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,23 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:18.0.0'
     implementation 'com.google.firebase:firebase-storage:18.0.0'
     implementation 'com.google.firebase:firebase-auth:18.0.0'
+    implementation 'com.google.firebase:firebase-messaging:19.0.0'
+    implementation 'com.firebaseui:firebase-ui-database:4.3.0'
 
     //Font
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+
+    //CardView and RecyclerView
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //   implementation 'com.github.mancj:MaterialSearchBar:0.8.1'
+    //   implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    //   implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    //   implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
 
 
 }
