--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,14 +43,14 @@ dependencies {
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
 
     //CardView and RecyclerView
-    implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0-alpha3'
+    implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    //   implementation 'com.github.mancj:MaterialSearchBar:0.8.1'
-    //   implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     //   implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     //   implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
 
